--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pytest-django==4.7.0
 qrcode==7.4.2
 bleach==6.1.0
 django-ratelimit==4.1.0
-psycopg2-binary==2.9.9
+psycopg2==2.9.9
 gunicorn==21.2.0
 whitenoise==6.6.0
 dj-database-url==2.1.0
