--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@ DEBUG=False
 SECRET_KEY=your-secret-key-here-change-this-in-production
 
 DATABASE_URL=postgresql://user:password@localhost/lost_found
+user=postgres
+password=nygpik-hyhryg-5jytQy
+host=db.zeuuebdjuhtpacxubcmv.supabase.co
+port=5432
+dbname=postgres
 
 GEMINI_API_KEY=your_gemini_api_key_here
 
@@ -12,3 +17,4 @@ CLOUDINARY_API_SECRET=your_api_secret
 ALLOWED_HOSTS=localhost,127.0.0.1,your-render-domain.onrender.com
 
 CSRF_TRUSTED_ORIGINS=http://localhost:8000,http://localhost:3000,https://your-render-domain.onrender.com
+DATABASE_URL=postgresql://lost_found:[nygpik-hyhryg-5jytQy]@db.zeuuebdjuhtpacxubcmv.supabase.co:5432/postgres
